[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["server", "http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
http-body-util = "0.1"
bytes = "1"
tokio-util = "0.7.18"
hyper-util = { version = "0.1.19", features = ["tokio"] }
tar = "0.4.44"
flate2 = "1.1.8"
base64 = "0.22.1"

[profile.release]
codegen-units = 1
lto = true
strip = true 